--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
+    "express-session": "^1.17.2",
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
+    "mongoose": "^6.0.13",
+    "mongoose-validator": "^2.1.0",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
-    "shelljs": "0.8.4"
+    "shelljs": "0.8.4",
+    "sinon-chai": "^3.7.0",
+    "sinon-express-mock": "^2.2.1"
   },
   "devDependencies": {
     "chai": "4.3.4",
